# fdlang

./: CMakeLists.txt  README.MD  README.md  Status.md  add_clones.py  add_debug_enum.py  add_debug_unify.py  add_enum_unify.py  add_printf.py  build_log.txt  build_out.txt  check.py  dbg.py  debug_crash.py  debug_fix.py  debug_fix2.py  debug_fix3.py  debug_fix4.py  debug_namedtypenode.py  debug_print.py  debug_prints.py  debug_tc.py  debug_tc2.py  debug_trace.py  dummy.fd  fix_constraintgen.py  fix_for.py  fix_header.py  fix_impl.py  fix_infinite_recursion.py  fix_mvir.py  fix_parser.py  fix_semantics.py  fix_semantics2.py  fix_struct_init.py  fix_struct_init_2.py  fix_targetType.py  fix_targetType_2.py  fix_test.py  fix_type_resolver.py  (+111 more)
.agents/: AGENTS.md
docs/: BaoCao.docx  FLIR.MD  PROJECT_STATUS.md  Phase5_Module_System_Plan.md  Phase6_Advanced_Features_Plan.md  Phase6_Generics_Traits_Plan.md  RoadMap.md  VISION.MD  architecture.md  ast.md  grammar.md  implementation_plan.md  log.txt  zen.md  ~$BaoCao.docx
editors/vscode/: package-lock.json  package.json
editors/vscode/src/: extension.ts
examples/: ex.fl  ex.ms  example.fl  example.ms  flir_test.ms  hello.ms  main_module.ms  mylib.ms  test_cfg_advanced.ms  test_control_flow.ms  test_generics.ms  test_memory.ms
examples/multi_file/: main.ms  math.ms
include/fdlang/AST/: ASTNode.h  DeclNode.h  ExprNode.h  PatternNode.h  ProgramNode.h  StmtNode.h  TypeNode.h
include/fdlang/BackEnd/: ExecutableGenerator.h  LLVMIRGenerator.h
include/fdlang/Core/: FLType.h  Identifier.h  SourceLocation.h  StringInterner.h  Types.h
include/fdlang/FrontEnd/: ASTVisitor.h  Lexer.h  Parser.h  Token.h
include/fdlang/MiddleEnd/: FLIR.h  FLIRGenerator.h  Resolver.h  ScopeStack.h  Semantic.h  SemanticAnalyzer.h  Symbol.h  SymbolTable.h  TypeChecker.h
include/fdlang/MiddleEnd/Symbol/: SymbolTable.h
include/fdlang/Support/: ClangLinker.h  Diagnostic.h  Linker.h
include/mellis/AST/: ASTNode.h  DeclNode.h  ExprNode.h  PatternNode.h  ProgramNode.h  StmtNode.h  TypeNode.h
include/mellis/BackEnd/: ExecutableGenerator.h  LLVMIRGenerator.h
include/mellis/Core/: CompilerSession.h  FLType.h  HashUtils.h  Identifier.h  ModuleDepGraph.h  SourceLocation.h  SourceManager.h  StringInterner.h  Types.h  WorkspaceBuilder.h
include/mellis/FrontEnd/: ASTVisitor.h  Lexer.h  MacroRegistry.h  Parser.h  Token.h
include/mellis/LSP/: LSPServer.h
include/mellis/MLib/: BinaryReader.h  BinaryWriter.h  DebugInfoBuilder.h  DepGraphBuilder.h  DocSectionBuilder.h  GenericDeserializer.h  GenericMetadataBuilder.h  GenericSerializer.h  MLibFormat.h  MLibGenerator.h  MLibMetadataCache.h  MacroMetadataBuilder.h  ModuleLoader.h
include/mellis/MiddleEnd/: BorrowChecker.h  CFG.h  FLIR.h  FLIRGenerator.h  LivenessAnalyzer.h  MVIR.h  MVIRGenerator.h  MVIROptimizer.h  Mangle.h  MatchAnalyzer.h  MonomorphizationEngine.h  Place.h  Resolver.h  ScopeStack.h  Semantic.h  SemanticAnalyzer.h  SubstitutionVisitor.h  Symbol.h  SymbolTable.h  TypeChecker.h
include/mellis/Support/: ClangLinker.h  Diagnostic.h  LLDLinker.h  Linker.h
scratch/: gen_resolver.py  run_test.cpp
src/: main.cpp
src/AST/: ASTNode.cpp  CloneImpl.cpp
src/BackEnd/: ExecutableGenerator.cpp  LLVMIRGenerator.cpp
src/Core/: CompilerSession.cpp  ModuleDepGraph.cpp  SourceManager.cpp  WorkspaceBuilder.cpp
src/FrontEnd/: ImportResolver.cpp  Lexer.cpp  Parser.cpp
src/LSP/: LSPServer.cpp
src/MLib/: BinaryReader.cpp  BinaryWriter.cpp  DebugInfoBuilder.cpp  DepGraphBuilder.cpp  DocSectionBuilder.cpp  GenericDeserializer.cpp  GenericMetadataBuilder.cpp  GenericSerializer.cpp  MLibGenerator.cpp  MLibMetadataCache.cpp  MacroMetadataBuilder.cpp  ModuleLoader.cpp
src/MiddleEnd/: BorrowChecker.cpp  CFG.cpp  FLIR.cpp  FLIRGenerator.cpp  LivenessAnalyzer.cpp  MVIR.cpp  MVIRGenerator.cpp  MVIROptimizer.cpp  Mangle.cpp  MatchAnalyzer.cpp  MonomorphizationEngine.cpp  Resolver.cpp  SemanticAnalyzer.cpp  SubstitutionVisitor.cpp  SymbolTable.cpp  TypeChecker.cpp
src/Runtime/: runtime.c
src/Support/: ClangLinker.cpp  Diagnostic.cpp  LLDLinker.cpp
tests/: math_lib.ms  test_all.ms  test_array.ms  test_ast_manual.cpp  test_borrow_checker.cpp  test_cfg.cpp  test_closure.ms  test_diagnostic.cpp  test_executable_generator.cpp  test_flir_generator.cpp  test_generic_impl.ms  test_incremental_build.cpp  test_lexer.cpp  test_llvmir_generator.cpp  test_mlib.cpp  test_module_loader.cpp  test_mvir_generator.cpp  test_mvir_opt.ms  test_parser.cpp  test_resolver.cpp  test_sematic.cpp  test_typechecker.cpp  test_unsafe.ms  test_while.ms
tests/module_test/: generic_func_test.ms  main.ms  match_test.ms  math.ms  struct_test.ms  test_enums.ms  test_generics.ms  tuple_test.ms
tests/module_test/utils/: mod.ms  string.ms
